Add public privacy policy page
